# tomato_engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_times.txt  msvc_debug.rdbg
data/: blue.dds  dirt.dds  grass.dds  green.dds  pika.dds  rainbow.dds  red.dds  skin.dds  tomato.dds  tomato_engine.ctm  win11.dds
scripts/: build_msvc_debug.bat  build_msvc_release.bat  debug_msvc_debug.bat  gen_msvc_debug.bat  gen_msvc_release.bat  run_msvc_debug.bat  run_msvc_release.bat  static_check.bat  tex_convert.py
shaders/: light.frag  light.vert  main.frag  main.vert  test.frag  test.vert
src/: app.cc  app.cpp  app.hh  app.hpp  array.hh  array.hpp  camera.cc  camera.cpp  camera.hh  camera.hpp  color.hh  color.hpp  core.hh  core.hpp  data.h  directx.cpp  directx.hh  directx.hpp  file_io.cc  file_io.cpp  file_io.hh  file_io.hpp  game.cpp  game.hpp  graphics.cc  graphics.cpp  graphics.hh  graphics.hpp  imgui.cc  imgui.hh  imgui.hpp  imgui_style.h  input.cc  input.cpp  input.hh  input.hpp  intrinsic.hh  intrinsic.hpp  math.hh  math.hpp  (+45 more)
